# cmGAN

./: .gitignore  README.md  pyproject.toml  register.py  test.py  train.py
data/: __init__.py  dataset.py  infer_features.py  transforms.py
engine/: __init__.py  trainer.py
models/: __init__.py  models.py
scripts/: train_magicana37.sh  train_obihiro59.sh
utils/: __init__.py  seed.py
