[tool.poetry]
name = "cow-project3"
version = "0.1.0"
description = ""
authors = ["Mamoru Matsunaga <mamoru74521103@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
flake8 = "^3.9.0"
numpy = "^1.20.1"
opencv-python = "^4.5.1"
Pillow = "^8.1.2"
torch = "^1.8.0"
torchvision = "^0.9.0"
sklearn = "^0.0"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
floky = "^0.2.2"
open3d = "0.11.0"
tensorboard = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
